--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-CLIENT_ID:"OEZfrYiedpa9RSucQHA7RF95XyVrZ1wLOKf2nScGAXk"
+CLIENT_ID="OEZfrYiedpa9RSucQHA7RF95XyVrZ1wLOKf2nScGAXk"
+API_KEY = "b87e33652d6e9220fb80bbfb24df170a"
