--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/react-redux": "^7.1.33",
+    "antd": "^5.16.4",
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
