--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@types/react-redux": "^7.1.33",
-    "antd": "^5.16.4",
-    "next": "14.2.2",
+    "next": "^14.2.3",
     "react": "^18",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18",
     "react-icons": "^5.1.0",
     "react-redux": "^9.1.1",
